<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rectangle_bluegrey1"
        tools:context=".home.dashboard.DashboardFragment">


        <TextView
            android:id="@+id/txv_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/imv_profil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txv_user" />

        <TextView
            android:id="@+id/txv_ewallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:drawableStart="@drawable/ic_account_balance_wallet_24px"
            android:textColor="@color/colorGren"
            android:textSize="22sp"
            app:drawableTint="@color/colorPink"
            app:layout_constraintEnd_toStartOf="@+id/imv_profil"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txv_ewallet" />

        <ImageView
            android:id="@+id/imv_profil"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_ewallet"
            android:text="@string/now_playing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txv_comingsoon"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/rcv_coming_soon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_now_playing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_coming_soon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>